[gd_scene load_steps=6 format=2]

[ext_resource path="res://SummoningArea.png" type="Texture" id=1]
[ext_resource path="res://SummoningArea.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 0.5 )

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0, 0.737589 )
colors = PoolColorArray( 0.933594, 0.178324, 0.072937, 0.564706, 1, 1, 1, 0 )

[sub_resource type="GradientTexture2D" id=9]
gradient = SubResource( 8 )
fill = 1
fill_from = Vector2( 0.5, 0.5 )

[node name="SummoningArea" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.5 )
shape = SubResource( 1 )

[node name="LightSprite" type="Sprite" parent="."]
position = Vector2( 1.90735e-06, 0.5 )
scale = Vector2( 1, 0.984375 )
texture = SubResource( 9 )

[connection signal="body_entered" from="." to="." method="_on_SummoningArea_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_SummoningArea_body_exited"]
